[gd_scene load_steps=3 format=3 uid="uid://bk4asqlje361t"]

[ext_resource type="Script" uid="uid://hhfyyrkuyenh" path="res://pickups/scripts/pickup_item.gd" id="1_m03bp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gsyjk"]

[node name="PickupItem" type="Area2D"]
script = ExtResource("1_m03bp")

[node name="ItemSprite" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gsyjk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
